--- a/style.scss
+++ b/style.scss
@@ -154,17 +154,17 @@ progressbar {
   }
 }
 
-#calendar {
-  background-color: transparent;
+calendar {
+  color: $fg_color;
+  padding: 4px 8px 8px;
 
-  calendar {
-    background-color: $bg_color;
-    color: $fg_color;
-    border-radius: $border_radius;
-    padding: 4px 8px 8px;
+  label {
+    padding: 5px 3px;
 
-    label {
-      padding: 5px;
+    &:selected {
+      background-color: rgba($theme_color, 0.7);
+      color: rgba($bg_color, 1);
+      border: 1px solid rgba($theme_color, 0.9);
     }
   }
 }
