--- a/style.scss
+++ b/style.scss
@@ -61,7 +61,8 @@ button {
   }
 
   &.focused {
-    background-color: rgba($fg_color, 0.1);
+    background-color: rgba($bg_color, 0.3);
+    box-shadow: 0 2px 8px $shadow_color;
     color: $theme_color;
   }
 
@@ -109,6 +110,14 @@ button {
     color: $fg_color;
     padding-top: 0;
     padding-bottom: 0;
+
+    &:hover {
+      background-color: rgba($fg_color, 0.1);
+    }
+
+    &:active {
+      background-color: rgba($fg_color, 0.2);
+    }
   }
 }
 
