--- a/style.scss
+++ b/style.scss
@@ -62,6 +62,7 @@ menubutton>button {
 button {
   padding: 4px 9px;
   background-color: transparent;
+  font-weight: 500;
 
   &:hover {
     background-color: rgba($fg_color, 0.05);
@@ -88,6 +89,7 @@ button {
 
 .title {
   margin: 0 7px;
+  font-weight: 500;
 }
 
 .updatable {
@@ -137,6 +139,8 @@ button {
 }
 
 .traffic {
+  font-weight: 500;
+
   .icon {
     -gtk-icon-transform: rotate(-90deg);
   }
