--- a/style.scss
+++ b/style.scss
@@ -1,46 +1,54 @@
-$font-family: "JetBrainsMono NF", "Font Awesome 6 Free Solid";
-$fg_color: rgb(32, 32, 32);
-$bg_color: rgba(242, 242, 247, 0.5);
+@use 'sass:string';
+
+@function fg_color($alpha: 1) {
+  @return string.unquote("alpha(@theme_fg_color, #{$alpha})");
+}
+
+@function bg_color($alpha: 0.5) {
+  @return string.unquote("alpha(@theme_bg_color, #{$alpha})");
+}
+
+$font_family: "JetBrainsMono NF", "Font Awesome 6 Free Solid";
 $shadow_color: rgba(0, 0, 0, 0.1);
 $border_radius: 10px;
 $theme_color: rgb(0, 122, 255);
-$success_color: rgb(0, 125, 27);
+$success_color: #{"@success_color"};
 $warning_color: rgb(255, 204, 0);
-$warning_color2: rgb(255, 149, 0);
-$critical_color: rgb(255, 59, 48);
+$warning_color2: #{"@warning_color"};
+$critical_color: #{"@error_color"};
 
 tooltip {
-  font-family: $font-family;
-  background-color: $bg_color;
-  color: $fg_color;
+  font-family: $font_family;
+  background-color: bg_color();
+  color: fg_color();
   border-radius: $border_radius;
   border: 1px solid $shadow_color;
 }
 
 .nerd-font {
-  font-family: $font-family;
+  font-family: $font_family;
 }
 
 popover {
   contents {
-    background-color: $bg_color;
+    background-color: bg_color();
     border-radius: $border_radius;
   }
 
   modelbutton {
-    color: $fg_color;
+    color: fg_color();
 
     &:hover {
       background-color: rgba($theme_color, 0.7);
-      color: rgba($bg_color, 1);
+      color: bg_color(1);
       box-shadow: inset 0 0 0 1px rgba($theme_color, 0.9);
     }
   }
 }
 
 #bar {
-  background-color: $bg_color;
-  color: $fg_color;
+  background-color: bg_color();
+  color: fg_color();
 
   >box {
     > :first-child {
@@ -65,15 +73,15 @@ button {
   font-weight: 500;
 
   &:hover {
-    background-color: rgba($fg_color, 0.05);
+    background-color: fg_color(0.05);
   }
 
   &:active {
-    background-color: rgba($fg_color, 0.1);
+    background-color: fg_color(0.1);
   }
 
   &.focused {
-    background-color: rgba($bg_color, 0.3);
+    background-color: bg_color(0.3);
     box-shadow: 0 2px 8px $shadow_color;
     color: $theme_color;
   }
@@ -120,20 +128,20 @@ button {
   }
 
   .dependency {
-    color: dimgrey;
+    color: fg_color(0.6);
   }
 
   popover button {
-    color: $fg_color;
+    color: fg_color();
     padding-top: 0;
     padding-bottom: 0;
 
     &:hover {
-      background-color: rgba($fg_color, 0.1);
+      background-color: fg_color(0.1);
     }
 
     &:active {
-      background-color: rgba($fg_color, 0.2);
+      background-color: fg_color(0.2);
     }
   }
 }
@@ -169,7 +177,7 @@ levelbar {
       min-height: 2px;
 
       &.normal {
-        background-color: rgba($fg_color, 0.9);
+        background-color: fg_color(0.9);
       }
 
       &.warning {
@@ -184,7 +192,7 @@ levelbar {
 }
 
 calendar {
-  color: $fg_color;
+  color: fg_color();
   padding: 4px 8px 8px;
 
   label {
@@ -192,7 +200,7 @@ calendar {
 
     &:selected {
       background-color: rgba($theme_color, 0.7);
-      color: rgba($bg_color, 1);
+      color: bg_color(1);
       border: 1px solid rgba($theme_color, 0.9);
     }
   }
