--- a/style.scss
+++ b/style.scss
@@ -43,6 +43,10 @@ popover {
       box-shadow: inset 0 0 0 1px rgba($theme_color, 0.9);
     }
   }
+
+  separator {
+    margin: 4px 0;
+  }
 }
 
 #bar {
