--- a/style.scss
+++ b/style.scss
@@ -138,7 +138,7 @@ button {
   font-weight: 500;
 
   &:hover {
-    background-color: fg_color(0.05);
+    background-color: bg_color(0.2);
   }
 
   &:active {
