--- a/style.scss
+++ b/style.scss
@@ -34,12 +34,22 @@ popover {
     border-radius: $border_radius;
   }
 
-  modelbutton {
+  modelbutton,
+  button {
+    padding-top: 0;
+    padding-bottom: 0;
+    min-height: 29px;
+    font-weight: 400;
+    transition-duration: 0;
 
     &:hover {
       background-color: rgba($theme_color, 0.7);
       color: bg_color(1);
       box-shadow: inset 0 0 0 1px rgba($theme_color, 0.9);
+    }
+
+    &:active {
+      background-color: rgba($theme_color, 0.9);
     }
   }
 
@@ -188,11 +198,10 @@ button {
 
   popover button {
     color: fg_color();
-    padding-top: 0;
-    padding-bottom: 0;
 
     &:hover {
       background-color: fg_color(0.1);
+      box-shadow: none;
     }
 
     &:active {
